@@ -1,12 +1,7 @@
 {
-  "count": 14,
-  "uniques": 5,
+  "count": 13,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2025-10-02T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-10-04T00:00:00Z",
       "count": 1,
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-10-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-16T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
