@@ -1,3 +1,12 @@
+2025-10-17T00:52:40Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18579007175 # 799
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
+* notice: last 14d: unq all: 4 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 661 1055 / 675 1069
+* notice: next accum: outdated-unq outdated-all / unq all: 663 1057 / 676 1070
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-10-02] / [2025-10-16]
+
 2025-10-16T00:53:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18546858807 # 798
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-16
